<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="8dp"
        app:cardElevation="20dp"
        android:layout_marginTop="25dp"
        >
        <LinearLayout
            android:id="@+id/btnCategories"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:textSize="25dp"
            android:orientation="horizontal"
            android:textColor="@color/black"
            android:textAlignment="textStart"
            android:drawableEnd="@drawable/ic_arrow"
            >

            <ImageView
                android:id="@+id/imgProduct"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:layout_marginTop="20dp"
                android:src="@drawable/dior" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/product_brand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brand_name"
                    android:layout_marginTop="20dp"
                    android:textSize="20dp"
                    android:textStyle="bold"

                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price_tag"
                        android:textSize="17dp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/price"
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textSize="17dp"

                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity_tag"
                        android:textSize="17dp"
                        android:textStyle="bold"

                        />
                    <TextView
                        android:id="@+id/quantity"
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity"
                        android:textSize="17dp"

                        />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>





</LinearLayout>