<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_gravity="center"
        app:cardCornerRadius="8dp"
        app:cardElevation="20dp"
        >
        <LinearLayout
            android:background="@color/dark_blue"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/imgProduct"
                android:layout_width="250dp"
                android:layout_height="300dp"
                android:src="@drawable/dior"
                />
            <TextView
                android:id="@+id/product_brand"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pro_brand"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20dp"
                />
            <TextView
                android:id="@+id/product_name"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:text="@string/pro_name"
                android:textSize="20dp"
                />
            <TextView
                android:id="@+id/product_price"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="20dp"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>




</LinearLayout>