<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/back_btn"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@drawable/button_background"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="Back"
                    android:layout_marginEnd="10dp"/>

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sansbold"
                    android:text="@string/product"
                    android:textColor="@color/white"
                    android:textSize="35dp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgProduct"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:scaleType="fitXY"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/dior" />


            </LinearLayout>
            <TextView
                android:id="@+id/product_brand"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brand_name"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="25dp"/>
            <TextView
                android:id="@+id/product_name"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pro_name"
                android:textStyle="italic"
                android:textColor="@color/white"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/product_price"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textStyle="italic"
                android:textColor="@color/white"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/available"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/available"
                android:textColor="@color/white"
                android:textSize="20dp"/>


            <LinearLayout

                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_red"
                android:orientation="vertical"
                >
                <TextView

                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="25dp"/>
                <TextView
                    android:id="@+id/product_description"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail"
                    android:textColor="@color/white"
                    android:textSize="20dp"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buyingbtn"
                android:layout_width="match_parent"
                android:background="@drawable/buttons"
                android:layout_height="55dp"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:text="Add to Bag"
                />

        </LinearLayout>

    </ScrollView>

</FrameLayout>