<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/black"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="175dp"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgProfile"
                android:layout_width="100dp"
                android:src="@drawable/ic_profile"
                android:layout_height="100dp"/>


            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="100dp"/>

            <ImageView
                android:id="@+id/editbutt"
                android:layout_marginTop="35dp"
                android:src="@drawable/ic_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:paddingStart="30dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/username"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtUsername"
                    android:text="UserName"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <View
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/email"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtEmail"
                    android:textColor="@color/white"
                    android:text="Email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logoutbut"
                android:layout_marginHorizontal="50dp"
                android:layout_width="match_parent"
                android:background="@drawable/buttons"
                android:layout_height="55dp"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:text="@string/logout"
                />




        </LinearLayout>




    </LinearLayout>

</FrameLayout>
