<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

             <LinearLayout
                 android:layout_width="match_parent"
                 android:orientation="horizontal"
                 android:gravity="center"
                 android:layout_height="50dp">

                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/brand"
                         android:fontFamily="@font/sansbold"
                         android:textColor="@color/white"
                         android:textSize="35dp"
                         android:textStyle="bold" />
             </LinearLayout>

            <LinearLayout
                android:background="@drawable/home_background"
                android:id="@+id/contf"
                android:orientation="horizontal"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="11dp">

                <RelativeLayout
                    android:layout_width="180dp"
                    android:layout_height="match_parent">


                    <TextView
                        android:id="@+id/txtbest_seller"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="31dp"
                        android:layout_marginEnd="40dp"
                        android:text="Top Seller"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        tools:ignore="TextSizeCheck" />

                    <TextView
                        android:id="@+id/text"
                        android:layout_below="@id/txtbest_seller"
                        android:layout_width="110dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="30dp"
                        android:textColor="@color/white"
                        android:text="This is product sold the most this month"
                        android:textSize="15dp"
                        android:textStyle="bold"/>

                </RelativeLayout>

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"

                    android:layout_alignParentEnd="true">
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginTop="20dp"
                        app:cardCornerRadius="20dp">
                        <ImageView

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/johny" />


                    </androidx.cardview.widget.CardView>


                </LinearLayout>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/brand_name"
                android:fontFamily="@font/sansbold"
                android:textColor="@color/white"

                android:textSize="30dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/brand_description"
                android:textSize="15dp"
                android:textColor="@color/white"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_in"
                android:textColor="@color/white"

                android:fontFamily="@font/sansbold"
                android:paddingTop="10dp"
                android:textSize="15dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_products_description"
                android:paddingTop="10dp"
                android:textColor="@color/white"
                android:textSize="15dp"
                />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </HorizontalScrollView>





        </LinearLayout>

    </ScrollView>


</FrameLayout>